--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </div>
     <p class="mainn">
-      <a href="https://www.instagram.com/rudrarohaan/">~rudrarohaan</a>
+      <a href="https://bit.ly/m/rudrarohaan">~rudrarohaan</a>
     </p>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script>
